Updated the British English translation.

--- a/po/wesnoth-dm/en_GB.po
+++ b/po/wesnoth-dm/en_GB.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2012-08-18 09:41+0200\n"
-"PO-Revision-Date: 2012-08-15 05:05-0500\n"
+"PO-Revision-Date: 2012-09-02 23:21-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -4126,17 +4126,20 @@ msgstr "Maldun"
 msgid "Alderoth"
 msgstr "Alderoth"
 
+# TODO: maybe decapitalize "Undead"
 #. [note]
 #: data/campaigns/Delfadors_Memoirs/scenarios/19_Showdown_in_the_Northern_Swamp.cfg:172
 msgid ""
 "The killing blow against Iliah-Malal can only be struck by one of your "
 "Undead veterans"
 msgstr ""
+"The killing blow against Iliah-Malal can only be struck by one of your "
+"Undead veterans"
 
 #. [note]
 #: data/campaigns/Delfadors_Memoirs/scenarios/19_Showdown_in_the_Northern_Swamp.cfg:182
 msgid "The killing blow against Iliah-Malal can only be struck by Delfador"
-msgstr ""
+msgstr "The killing blow against Iliah-Malal can only be struck by Delfador"
 
 #. [message]: speaker=Iliah-Malal
 #: data/campaigns/Delfadors_Memoirs/scenarios/19_Showdown_in_the_Northern_Swamp.cfg:223
