--- a/po/wesnoth-nr/en_GB.po
+++ b/po/wesnoth-nr/en_GB.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-08-18 09:41+0200\n"
-"PO-Revision-Date: 2012-08-16 11:21-0500\n"
+"POT-Creation-Date: 2012-09-01 18:47+0200\n"
+"PO-Revision-Date: 2012-09-02 22:56-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -911,10 +911,8 @@ msgstr ""
 
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/02_Infested_Caves.cfg:292
-#, fuzzy
-#| msgid "... Uh ok!"
 msgid "... Uh, sure!"
-msgstr "... Uh ok!"
+msgstr "... Uh, sure!"
 
 #. [message]: speaker=Camerin
 #: data/campaigns/Northern_Rebirth/scenarios/02_Infested_Caves.cfg:296
@@ -941,10 +939,8 @@ msgstr "Hordes of trolls and skeletons! Where?! Let’s go burn ’em all!"
 
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/02_Infested_Caves.cfg:309
-#, fuzzy
-#| msgid "Er... ok..."
 msgid "Er... let’s go..."
-msgstr "Er... ok..."
+msgstr "Er... let’s go..."
 
 #. [message]: speaker=unit
 #: data/campaigns/Northern_Rebirth/scenarios/02_Infested_Caves.cfg:313
