--- a/po/wesnoth-sotbe/en_GB.po
+++ b/po/wesnoth-sotbe/en_GB.po
@@ -4,8 +4,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 0.8.11+cvs\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-08-18 09:41+0200\n"
-"PO-Revision-Date: 2012-08-16 11:46-0500\n"
+"POT-Creation-Date: 2012-09-01 18:47+0200\n"
+"PO-Revision-Date: 2012-09-02 22:53-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -2250,26 +2250,22 @@ msgstr ""
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/08_Silent_Forest.cfg:289
 msgid "As for this weakling, I’ll personally behead her."
-msgstr ""
+msgstr "As for this weakling, I’ll personally behead her."
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/08_Silent_Forest.cfg:296
 msgid "As for this weakling, I’ll personally behead him."
-msgstr ""
+msgstr "As for this weakling, I’ll personally behead him."
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/08_Silent_Forest.cfg:312
-#, fuzzy
-#| msgid "With pleasure. But what should I do with this weakling?"
 msgid "female^With pleasure. But what should I do with this weakling?"
 msgstr "With pleasure. But what should I do with this weakling?"
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/08_Silent_Forest.cfg:317
-#, fuzzy
-#| msgid "Behead it."
 msgid "Behead her."
-msgstr "Behead it."
+msgstr "Behead her."
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/08_Silent_Forest.cfg:324
@@ -2278,10 +2274,8 @@ msgstr "With pleasure. But what should I do with this weakling?"
 
 #. [message]: speaker=Kapou'e
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/08_Silent_Forest.cfg:329
-#, fuzzy
-#| msgid "Behead it."
 msgid "Behead him."
-msgstr "Behead it."
+msgstr "Behead him."
 
 #. [message]: speaker=unit
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/08_Silent_Forest.cfg:338
@@ -2689,10 +2683,8 @@ msgstr "Grüü, stay away from that thing! I still have a use for you!"
 
 #. [message]: speaker=Grüü
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/10_Saving_Inarix.cfg:363
-#, fuzzy
-#| msgid "Uh... OK, Chief!"
 msgid "Uh... Fine, Chief!"
-msgstr "Uh... OK, Chief!"
+msgstr "Uh... Fine, Chief!"
 
 #. [message]: speaker=Inarix
 #: data/campaigns/Son_Of_The_Black_Eye/scenarios/10_Saving_Inarix.cfg:381
