--- a/po/wesnoth-trow/en_GB.po
+++ b/po/wesnoth-trow/en_GB.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2012-08-25 12:35+0200\n"
-"PO-Revision-Date: 2012-08-16 12:35-0500\n"
+"POT-Creation-Date: 2012-09-01 18:47+0200\n"
+"PO-Revision-Date: 2012-09-02 22:48-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -2711,15 +2711,11 @@ msgstr ""
 
 #. [message]: speaker=Prince Haldric
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/09_Fallen_Lich_Point.cfg:264
-#, fuzzy
-#| msgid ""
-#| "Okay. Let’s un-petrify that lich and take his book, then get into the "
-#| "sewers. Umm, what language would that book be in?"
 msgid ""
 "Well, let’s un-petrify that lich and take his book, then get into the "
 "sewers. Umm, what language would that book be in?"
 msgstr ""
-"Okay. Let’s un-petrify that lich and take his book, then get into the "
+"Well, let’s un-petrify that lich and take his book, then get into the "
 "sewers. Umm, what language would that book be in?"
 
 #. [message]: speaker=Lady Jessene
@@ -4104,15 +4100,11 @@ msgstr "Wait, I see a ship. Many ships. We’re being invaded!"
 
 #. [message]: speaker=Dursil
 #: data/campaigns/The_Rise_Of_Wesnoth/scenarios/15_A_New_Land.cfg:137
-#, fuzzy
-#| msgid ""
-#| "Umm, we’re being invaded? Okay, we’ll sort out our differences later. "
-#| "Let’s get them first."
 msgid ""
 "Umm, we’re being invaded? Fine, we’ll sort out our differences later. Let’s "
 "get them first."
 msgstr ""
-"Umm, we’re being invaded? Okay, we’ll sort out our differences later. Let’s "
+"Umm, we’re being invaded? Fine, we’ll sort out our differences later. Let’s "
 "get them first."
 
 #. [message]: speaker=Prince Haldric
@@ -6880,14 +6872,6 @@ msgstr "Wesfolk Lady"
 #. [unit_type]: id=Wesfolk Leader, race=human
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Wesfolk_Lady.cfg:22
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Wesfolk_Leader.cfg:23
-#, fuzzy
-#| msgid ""
-#| "Born in the Wesfolk aristocracy, she and her people were excluded from "
-#| "society by their lords, who betrayed their loyalty when a war against "
-#| "Haldric’s people was being lost. This outcast still conserves her "
-#| "nobleness in her veins and in the battlefield she has earned valuable "
-#| "experience, which continues increasing with time, as does her natural "
-#| "leadership."
 msgid ""
 "Born in the Wesfolk aristocracy, she and her people were excluded from "
 "society by their lords, who betrayed their loyalty when a war against "
@@ -6898,7 +6882,7 @@ msgstr ""
 "Born in the Wesfolk aristocracy, she and her people were excluded from "
 "society by their lords, who betrayed their loyalty when a war against "
 "Haldric’s people was being lost. This outcast still conserves her nobleness "
-"in her veins and in the battlefield she has earned valuable experience, "
+"in her veins and on the battlefield she has earned valuable experience, "
 "which continues increasing with time, as does her natural leadership."
 
 #. [attack]: type=impact
@@ -6927,14 +6911,6 @@ msgstr "Wesfolk Outcast"
 
 #. [unit_type]: id=Wesfolk Outcast, race=human
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Wesfolk_Outcast.cfg:22
-#, fuzzy
-#| msgid ""
-#| "Born in the Wesfolk aristocracy, she and her people were excluded from "
-#| "society by their lords, who betrayed their loyalty when a war against "
-#| "Haldric’s people was being lost. This outcast still conserves her "
-#| "nobleness in her veins and in the battlefield she has earned valuable "
-#| "experience, which she can lend to her people for turning a fight in their "
-#| "favor."
 msgid ""
 "Born in the Wesfolk aristocracy, she and her people were excluded from "
 "society by their lords, who betrayed their loyalty when a war against "
@@ -6945,7 +6921,7 @@ msgstr ""
 "Born in the Wesfolk aristocracy, she and her people were excluded from "
 "society by their lords, who betrayed their loyalty when a war against "
 "Haldric’s people was being lost. This outcast still conserves her nobleness "
-"in her veins and in the battlefield she has earned valuable experience, "
+"in her veins and on the battlefield she has earned valuable experience, "
 "which she can lend to her people for turning a fight in their favour."
 
 #. [unit_type]: id=Wose Sapling, race=wose
